@@ -486,6 +486,7 @@ exit 0
 - fix: set fcontext from pkg when file_contexts doesn't exist (#114040).
 - fix: set fcontext for "mkdir -p" directories not in packages.
 - fix: setfiles (aka rpmsx.c) dinna handle patterns correctly.
+- establish rpm_script_t before scriptlet exec, ignore errors for now.
 
 * Wed Feb 11 2004 Jeff Johnson <jbj@redhat.com> 4.3-0.10
 - re-add --enable-posixmutexes to build.
